# c4a-alerts-v2

./: .env.example  .gitignore  CHANGELOG.md  LICENSE  README.md  analyze_memory.py  bandit.yaml  config.py  env.example  firestore.rules  pyproject.toml
.github/workflows/: backend.yml  frontend.yml
analysis_output/: memory_report.json  memory_report.md
backend/: .eslintrc.json  README.md  package-lock.json  package.json
backend/public/: app.js  index.html
backend/src/: server.js
backend/src/config/: app.js  cors.js  env.js  firebase.js  security.js
backend/src/controllers/: ai.controller.js  alerts.controller.js  assets.controller.js  auth.controller.js  cti.controller.js  twoFactor.controller.js
backend/src/middlewares/: auth.middleware.js  authorize.middleware.js  errorHandler.js  rateLimit.js  sanitize.middleware.js  validate.middleware.js
backend/src/routes/: ai.routes.js  alerts.routes.js  assets.routes.js  auth.routes.js  cti.routes.js  health.routes.js
backend/src/schemas/: alerts.schema.js  assets.schema.js  auth.schema.js  cti.schema.js  twoFactor.schema.js
backend/src/services/: alerts.service.js  assets.service.js  auth.service.js  cti.correlation.js  cti.ingestor.js  cti.service.js  notification.service.js  telemetry.service.js  twoFactor.service.js
backend/src/utils/: httpResponses.js  init-default-user.js  jwt.js  logger.js
backend/test/: middlewares.test.js  schemas.test.js  smoke.test.js  test-gemini-api.js  validate-deployment.js  validate-gemini-with-key.js  validate-gemini.js
c4a-alerts/frontend/: index.html
c4a-alerts/frontend/src/: App.jsx  main.jsx
c4aalerts/: __init__.py
c4aalerts/app/: __init__.py
c4aalerts/app/api/: __init__.py  main.py  middleware.py
c4aalerts/app/auth/: jwt_auth.py
c4aalerts/app/schemas/: __init__.py  alert.py
c4aalerts/app/security/: input_validation.py  zero_trust.py
c4aalerts/app/services/: __init__.py  dedup.py  malware_detector.py  prioritize.py  router.py
c4aalerts/app/workers/: __init__.py  jobs.py  queue.py
cloud-function/: env.example  main.py  requirements.txt  telegram_webhook.py
cloud-function/collectors/: __init__.py  misp_csirt.py
cloud-function/notifiers/: __init__.py  telegram_bot_handler.py  telegram_notifier.py
cloud-function/static/: index.html
docs/: AUTHENTICATION_OPTIONS.md  DEPLOYMENT_OPTIONS.md  FLUID_ATTACKS_INTEGRATION.md  FRONTEND_UPGRADE_SUMMARY.md  JWT_AUTHENTICATION.md  MALWARE_DEFENSE_SUMMARY.md  PRODUCTION_SETUP.md  SECURITY_IMPROVEMENTS.md  SERVERLESS_IMPLEMENTATION.md  SETUP_PERSONAL.md
frontend/: .eslintrc.json  index.html  package-lock.json  package.json  vite.config.js  vitest.config.js
frontend/pages/: index.tsx
frontend/src/: App.jsx
frontend/src/components/: ProtectedRoute.jsx
memory_analysis/: __init__.py  analysis_engine.py  logging_utils.py  models.py  parsers.py  pipeline.py  reporting.py  vol_wrapper.py  volatility_runner.py
scripts/: README_SERVERLESS.md  advanced_counterattack.py  check_google_cloud_status.py  configure_public_bot.py  cost-check.ps1  cost-optimization.ps1  cost-optimization.sh  create_env.py  emergency_bot_security.py  emergency_token_revoke.py  fix-linting.py  fluid_attacks_analysis.py  get_chat_id.py  get_telegram_user_id.py  honeypot_trap.py  list_api_endpoints.py  local_security_analysis.py  prepare_github_push.py  quick_security_scan.py  quick_setup.py  setup-personal-env.ps1  setup-personal-env.sh  setup_github_secrets.py  setup_local_env.py  setup_telegram.py  setup_telegram_webhook.py  setup_token.py  simple_security_scan.py  test-misp-integration.py  validate_telegram.py
tests/: __init__.py  test_bot_commands.py  test_chatbot_integration.py  test_jwt_auth.py  test_malware_detection.py  test_telegram.py  test_telegram_simple.py
tests/unit/: __init__.py  test_health.py  test_schemas.py  test_workers.py
(+49 files in other folders)
